encapsulate getRaceHandle(); reformat some files to default-formatter;