@@ -10,7 +10,7 @@ import java.util.logging.Logger;
 
 import com.sap.sailing.domain.base.Competitor;
 import com.sap.sailing.domain.base.RaceDefinition;
-import com.sap.sailing.domain.common.RaceIdentifier;
+import com.sap.sailing.domain.common.RegattaAndRaceIdentifier;
 import com.sap.sailing.domain.common.RegattaNameAndRaceName;
 import com.sap.sailing.domain.tracking.GPSFixMoving;
 import com.sap.sailing.domain.tracking.GPSFixTrack;
@@ -18,7 +18,9 @@ import com.sap.sailing.domain.tracking.RacesHandle;
 import com.sap.sailing.domain.tracking.TrackedRace;
 import com.sap.sailing.domain.tracking.impl.EmptyWindStore;
 import com.sap.sailing.server.impl.RacingEventServiceImpl;
+import com.sap.sailing.simulator.impl.SimulatorUtils;
 
+@SuppressWarnings("restriction")
 public class RaceDataAccessTest {
 
     private static final Logger logger = Logger.getLogger(RaceDataAccessTest.class.getName());
@@ -31,7 +33,8 @@ public class RaceDataAccessTest {
     private static RacesHandle raceHandle;
     public boolean storedend = false;
 
-    public static void main(String[] args) throws Exception, InterruptedException, MalformedURLException, URISyntaxException {
+    public static void main(String[] args) throws Exception, InterruptedException, MalformedURLException,
+            URISyntaxException {
 
         // JSON URL: http://germanmaster.traclive.dk/events/event_20110929_Internatio/jsonservice.php
 
@@ -44,7 +47,8 @@ public class RaceDataAccessTest {
         // URL("http://germanmaster.traclive.dk/events/event_20110929_Internatio/clientparams.php?event=event_20110929_Internatio&race=be8a79a8-ec52-11e0-a523-406186cbf87c");
 
         // 49er Race4
-        // paramUrl = new URL("http://germanmaster.traclive.dk/events/event_20110929_Internatio/clientparams.php?event=event_20110929_Internatio&race=d1f521fa-ec52-11e0-a523-406186cbf87c");
+        // paramUrl = new
+        // URL("http://germanmaster.traclive.dk/events/event_20110929_Internatio/clientparams.php?event=event_20110929_Internatio&race=d1f521fa-ec52-11e0-a523-406186cbf87c");
 
         // 49er Race5
         // paramUrl = new
@@ -69,41 +73,38 @@ public class RaceDataAccessTest {
         //
         // Kieler Woche 2012, JSON: http://germanmaster.traclive.dk/events/event_20120615_KielerWoch/jsonservice.php
         //
-        // 49er 
-        paramUrl = new URL("http://germanmaster.traclive.dk/events/event_20120615_KielerWoch/clientparams.php?event=event_20120615_KielerWoch&race=0b5969cc-b789-11e1-a845-406186cbf87c");
-        
+        // 49er
+        paramUrl = new URL(
+                "http://germanmaster.traclive.dk/events/event_20120615_KielerWoch/clientparams.php?event=event_20120615_KielerWoch&race=0b5969cc-b789-11e1-a845-406186cbf87c");
+
         System.setProperty("mongo.port", "10200");
         System.setProperty("http.proxyHost", "proxy.wdf.sap.corp");
         System.setProperty("http.proxyPort", "8080");
-       // paramUrl = new URL("http://germanmaster.traclive.dk/events/event_20120615_KielerWoch/clientparams.php?event=event_20120615_KielerWoch&race=0b5969cc-b789-11e1-a845-406186cbf87c");
-        paramUrl = new URL("http://germanmaster.traclive.dk/events/event_20110929_Internatio/clientparams.php?event=event_20110929_Internatio&race=d1f521fa-ec52-11e0-a523-406186cbf87c");
-        //old
-        //liveUri = new URI("tcp://10.18.206.73:1520"); 
-        //proxy
+        // paramUrl = new
+        // URL("http://germanmaster.traclive.dk/events/event_20120615_KielerWoch/clientparams.php?event=event_20120615_KielerWoch&race=0b5969cc-b789-11e1-a845-406186cbf87c");
+        paramUrl = new URL(
+                "http://germanmaster.traclive.dk/events/event_20110929_Internatio/clientparams.php?event=event_20110929_Internatio&race=d1f521fa-ec52-11e0-a523-406186cbf87c");
+        // old
+        // liveUri = new URI("tcp://10.18.206.73:1520");
+        // proxy
         liveUri = new URI("tcp://10.18.22.156:1520");
-        //non-proxy
-        //liveUri =  new URI("tcp://germanmaster.traclive.dk:4400");
-        
-        //old
-        //storedUri = new URI("tcp://10.18.206.73:1521");
-        //proxy
+        // non-proxy
+        // liveUri = new URI("tcp://germanmaster.traclive.dk:4400");
+
+        // old
+        // storedUri = new URI("tcp://10.18.206.73:1521");
+        // proxy
         storedUri = new URI("tcp://10.18.22.156:1521");
-        //non-proxy
-        //storedUri = new URI("tcp://germanmaster.traclive.dk:4401");
-        
+        // non-proxy
+        // storedUri = new URI("tcp://germanmaster.traclive.dk:4401");
+
         service = new RacingEventServiceImpl();
         logger.info("Calling service.addTracTracRace");
-        Object obj = new Object();
-        //TODO: Fix raceHandle
-        /*
-        raceHandle = service.addTracTracRace(paramUrl, liveUri, storedUri, EmptyWindStore.INSTANCE, 60000, obj);
+
+        raceHandle = SimulatorUtils.loadRace(service, paramUrl, liveUri, storedUri, null, EmptyWindStore.INSTANCE,
+                60000);
         logger.info("Calling raceHandle.getRaces(): " + raceHandle);
 
-        synchronized (obj) {
-            obj.wait();
-        }
-        */
-        
         Set<RaceDefinition> races = raceHandle.getRaces(); // wait for RaceDefinition to be completely wired in Regatta
         logger.info("Obtained races: " + races.size());
 
@@ -114,9 +115,8 @@ public class RaceDataAccessTest {
             RaceDefinition race = racIter.next();
             System.out.println("Race: \"" + race.getName() + "\", \"" + regatta + "\"");
 
-            RaceIdentifier raceIdentifier = new RegattaNameAndRaceName(regatta, race.getName());
-            //TODO: fix getTrackedRace
-            TrackedRace tr = null; //service.getExistingTrackedRace(raceIdentifier);
+            RegattaAndRaceIdentifier raceIdentifier = new RegattaNameAndRaceName(regatta, race.getName());
+            TrackedRace tr = service.getExistingTrackedRace(raceIdentifier);
 
             System.out.println("Competitors:");
             Iterable<Competitor> competitors = tr.getRace().getCompetitors();
@@ -131,7 +131,8 @@ public class RaceDataAccessTest {
                 track.lockForRead();
                 fixes = track.getFixes();
                 GPSFixMoving fix = fixes.iterator().next();
-                System.out.println("" + com.getName() + ", First GPS-Fix: " + fix.getPosition().getLatDeg() + ", " + fix.getPosition().getLngDeg());
+                System.out.println("" + com.getName() + ", First GPS-Fix: " + fix.getPosition().getLatDeg() + ", "
+                        + fix.getPosition().getLngDeg());
                 track.unlockAfterRead();
 
             }
